--- a/AuthorizationMicroservice.csproj
+++ b/AuthorizationMicroservice.csproj
@@ -18,5 +18,11 @@
     <PackageReference Include="System.Diagnostics.EventLog" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AuthorizationMicroservice.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
